syntax = "proto3";
option go_package = "../core/service/proto;proto";



// 基础服务
service RegistryService{
   /** 获取注册表键值 */
   rpc GetRegistry(1:string key)returns(string)
   /** 获取键值存储数据字典 */
   map<string,string> GetRegistries(1:list<string> keys)
   /** 按键前缀获取键数据 */
   map<string,string> FindRegistries(1:string prefix)
   /** 更新注册表键值 */
   rpc UpdateRegistry(1:map<string,string> registries)returns(Result)
   /** 搜索注册表 */
   list<SRegistry> SearchRegistry(1:string key)
   /** 创建自定义注册表项,@defaultValue 默认值,如需更改,使用UpdateRegistry方法  */
   rpc CreateUserRegistry(1:string key,2:string defaultValue,3:string description)returns(Result)
   /** 获取键值存储数据 */
   list<string> GetRegistryV1(1:list<string> keys)
}

/** 注册表 */
message SRegistry {
    /** 键 */
    string Key = 1;
    /** 值 */
    string Value = 2;
    /** 默认值 */
    string Default = 3;
    /** 可选值 */
    string Options = 4;
    /** 标志 */
    sint32 Flag = 5;
    /** 描述 */
    string Description = 6;
}